@@ -2,43 +2,32 @@
 # Homework 6 - Course Review Application
 
 ## Authors
-1) Name, netid, [GitHub profile name]
-2) Name, netid, [GitHub profile name]
-3) Name, netid, [GitHub profile name]
-4) Name, netid, [GitHub profile name]
+1) Sophie Yan, drc5dr, [sophieyann]
+2) Enhui Li, cmk8wq, [lexiliiii]
+3) Rui Xiao, nsq8va, [IrisssXiao]
 
 ## To Run
 
-[Add a brief description of which .java file to run, and what vm arguments are needed]
+[Create a configuration, using the main class "edu.virginia.sde.reviews.CourseReviewApplication". For VM argument, using "--module-path "PATH_TO_JAVAFX_LIB_FOLDER" --add-modules javafx.controls,javafx.fxml". Then click apply and run.]
 
 ## Contributions
 
 List the primary contributions of each author. It is recommended to update this with your contributions after each coding session.:
 
-### [Author 1 - replace this with their name]
+### [Sophie Yan]
 
-* Author 1 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
+* Log-in Scene
+* Course Search Scene
 
-### [Author 2 - replace this with their name]
+### [Enhui Li]
 
-* Author 2 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
+* Implemented Database
 
-### [Author 3 - replace this with their name]
+### [Rui Xiao]
 
-* Author 3 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
-
-### [Author 4 - replace this with their name]
-
-* Author 4 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
+* Course Reviews Scene
+* My Reviews Scene
 
 ## Issues
 
-List any known issues (bugs, incorrect behavior, etc.) at the time of submission.
+No issues are being found when submitted.
